<resources>
    <string name="app_name">MOBILITY</string>
    <string name="user_name">Login</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="login_register">Registrarse</string>
    <string name="sign_in">Ingresar</string>
    <string name="name"> Nombre:</string>
    <string name="last_name"> Apellido:</string>
    <string name="city"> Ciudad:</string>
    <string name="gendre"> Género:</string>
    <string name="date_of_birth">Fecha de Nacimiento:</string>
    <string name="email">Correo Electrónico</string>
    <string name="register_login">Login:</string>
    <string name="register_password"> Contraseña</string>
    <string name="register_conf_password">Confirme su Contraseña</string>
    <string name="register">Registrar</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
