<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:id="@+id/register_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="388dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_edt_nombre"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:drawableTint="#FF4081"
                        android:singleLine="true"
                        android:hint="@string/name"
                        android:text=""
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_edt_apellido"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:drawableTint="#FF4081"
                        android:singleLine="true"
                        android:hint="@string/last_name"
                        android:text=""
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"/>
                <Spinner
                    android:id="@+id/spinner_ciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gendre"
                    />
                <RadioGroup
                    android:id="@+id/register_rdg_genero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@+id/rdb_masculino"
                    >
                    <RadioButton
                        android:id="@+id/register_rdb_masculino"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="M"
                        android:checked="true"

                        />
                    <RadioButton
                        android:id="@+id/register_rdb_femenino"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="F"
                        />

                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_edt_fecha_nacimiento"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:drawableTint="#FF4081"
                        android:singleLine="true"
                        android:hint="@string/date_of_birth"
                        android:text=""
                        android:inputType="none"
                        android:focusable="false"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_edt_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:drawableTint="#FF4081"
                        android:singleLine="true"
                        android:hint="@string/email"
                        android:text=""
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_edt_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:drawableTint="#FF4081"
                        android:singleLine="true"
                        android:hint="@string/register_login"
                        android:text=""
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_edt_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:drawableTint="#FF4081"
                        android:singleLine="true"
                        android:hint="@string/password"
                        android:text=""
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_edt_password_conf"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/user"
                        android:drawableTint="#FF4081"
                        android:singleLine="true"
                        android:hint="@string/register_conf_password"
                        android:text=""
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/register_btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>